@@ -1,22 +1,33 @@
 package com.project.MovieWebsite.controllers;
 
+import com.project.MovieWebsite.components.LocalizationUtil;
 import com.project.MovieWebsite.dtos.UserDTO;
 import com.project.MovieWebsite.dtos.UserLoginDTO;
+import com.project.MovieWebsite.models.User;
+import com.project.MovieWebsite.repositories.UserRepository;
 import com.project.MovieWebsite.services.UserService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.core.io.UrlResource;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.util.StringUtils;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.FieldError;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -24,24 +35,37 @@ import java.util.Map;
 public class UserController {
 
     private final UserService userService;
+    private final UserRepository userRepository;
+    private final LocalizationUtil localizationUtil;
 
 
     @PostMapping("/register")
-    public  ResponseEntity<?> createUser(@Valid @RequestBody UserDTO userDTO,
-                                         BindingResult result){
-        try{
-            if (result.hasErrors()){
-                List<String> errorsMessage = result.getFieldErrors().stream().map(FieldError::getDefaultMessage).toList();
-                return ResponseEntity.badRequest().body(errorsMessage);
+    public ResponseEntity<?> createUser(@Valid @RequestBody UserDTO userDTO, BindingResult result) {
+        try {
+            if (result.hasErrors()) {
+                // Nếu có lỗi trong dữ liệu đầu vào, trả về danh sách các lỗi
+                List<String> errors = result.getFieldErrors()
+                        .stream()
+                        .map(FieldError::getDefaultMessage)
+                        .collect(Collectors.toList());
+                return ResponseEntity.badRequest().body(errors);
             }
-            if(!userDTO.getPassword().equals(userDTO.getRetypePassword())){
+
+            // Kiểm tra xem mật khẩu và mật khẩu nhập lại có khớp không
+            if (!userDTO.getPassword().equals(userDTO.getRetypePassword())) {
                 return ResponseEntity.badRequest().body("Password does not match");
             }
 
+            // Gọi userService để tạo người dùng
             userService.createUser(userDTO);
-            return ResponseEntity.ok("Register successfully");
-        }catch (Exception e){
-            return ResponseEntity.badRequest().body(e.getMessage());
+
+            // Trả về thông báo thành công
+            Map<String, String> response = new HashMap<>();
+            response.put("message", "User created successfully");
+            return ResponseEntity.ok(response);
+        } catch (Exception e) {
+            // Nếu có lỗi, trả về thông báo lỗi
+            return ResponseEntity.badRequest().body("Failed to create user: " + e.getMessage());
         }
     }
 
@@ -57,6 +81,81 @@ public class UserController {
             errorResponse.put("error", "Invalid credentials. Please check your phone number and password.");
             return ResponseEntity.badRequest().body(errorResponse);
         }
+    }
+
+//    @PostMapping("/login")
+//    public ResponseEntity<LoginResponse> login(@Valid @RequestBody UserLoginDTO userLoginDTO) {
+//        try {
+//            String token = userService.login(userLoginDTO.getPhoneNumber(), userLoginDTO.getPassword());
+//            return ResponseEntity.ok(
+//                    LoginResponse.builder()
+//                            .message(localizationUtil.getLocalizedMessage(MessageKeys.LOGIN_SUCCESSFULLY))
+//                            .token(token)
+//                            .build());
+//        } catch (Exception e) {
+//            return ResponseEntity.badRequest().body(
+//                    LoginResponse.builder()
+//                            .message(localizationUtil.getLocalizedMessage(MessageKeys.LOGIN_FAILED, e.getMessage()))
+//                            .build());
+//        }
+//    }
+
+    @PostMapping(value = "upload_avatar/{id}", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    public ResponseEntity<?> uploadAvatar (
+            @PathVariable("id") int userId,
+            @Valid @ModelAttribute("file") MultipartFile file){
+
+        try {
+            User existingUser= userService.getUserById(userId);
+            if (file != null) {
+                if (file.getSize() > 10 * 1024 * 1024) {
+                    return ResponseEntity.status(HttpStatus.PAYLOAD_TOO_LARGE).body("File is too large! Maximum size is 10MB");
+                }
+                String contentType = file.getContentType();
+                if (contentType == null || !contentType.startsWith("image/")) {
+                    return ResponseEntity.status(HttpStatus.UNSUPPORTED_MEDIA_TYPE).body("File must be an image");
+                }
+                String filename = storeFile(file);
+                existingUser.setImgAvatar(filename);
+                userRepository.save(existingUser);
+            }
+            return ResponseEntity.ok("Upload Success Avatar");
+        } catch (Exception e) {
+            return ResponseEntity.badRequest().body(e.getMessage());
+        }
+    }
+
+    @GetMapping("/images/{imageName}")
+    public ResponseEntity<?> viewImage(@PathVariable String imageName){
+        try{
+            Path imagePath= Paths.get("uploads/img_avatar/"+imageName);
+            UrlResource resource= new UrlResource(imagePath.toUri());
+
+            if(resource.exists()){
+                return ResponseEntity.ok()
+                        .contentType(MediaType.IMAGE_JPEG)
+                        .body(resource);
+            }else{
+                return ResponseEntity.notFound().build();
+            }
+
+        }catch (Exception e){
+            return ResponseEntity.notFound().build();
+        }
+    }
+
+    private String storeFile(MultipartFile file) throws IOException {
+        String filename = StringUtils.cleanPath(file.getOriginalFilename());
+        String uniqueFilename = UUID.randomUUID().toString() + "_" + filename;
+        Path uploadDir = Paths.get("uploads/img_avatar");
+
+        if (!Files.exists(uploadDir)) {
+            Files.createDirectories(uploadDir);
+        }
+
+        Path destination = Paths.get(uploadDir.toString(), uniqueFilename);
+        Files.copy(file.getInputStream(), destination, StandardCopyOption.REPLACE_EXISTING);
+        return uniqueFilename;
     }
 
 
